Cloud/Azure-Cloud-Migration/01-VMware-to-Azure/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: migration-service
spec:
  type: LoadBalancer
  selector:
    app: migration-app
  ports:
  - port: 80
    targetPort: 80
